# api/model/isFollowingResponse.ts
@@ -2,7 +2,7 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-11-19T00:53:19Z
+ * OpenAPI spec version: 2019-11-19T21:03:11Z
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
